<resources>
    <string name="app_name">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nandan Pandey</string>
    <string name="nav_header_subtitle">pandeynandancse@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_download">Download</string>
    <string name="action_preview">Preview</string>
    <string name="action_watch">Watch</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_inbox">Songs</string>
    <string name="menu_outbox">Outbox</string>
    <string name="menu_sharedpreferences">Shared Preferences</string>
    <string name="menu_contactss">Contacts List</string>
    <string name="home_second">Home Second</string>
</resources>
