<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.profile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"/>

    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.profile.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.profile.ui.inbox"
        android:label="@string/menu_inbox"
        tools:layout="@layout/inbox_fragment" />


    <fragment
    android:id="@+id/nav_outbox"
    android:name="com.example.profile.ui.Outbox"
    android:label="@string/menu_outbox"
    tools:layout="@layout/outbox_fragment" />



    <fragment
        android:id="@+id/nav_sharedpreferences"
        android:name="com.example.profile.ui.sharedpreferences"
        android:label="@string/menu_sharedpreferences"
        tools:layout="@layout/sharedpreferences_fragment" />



    <fragment
        android:id="@+id/nav_contactss"
        android:name="com.example.profile.ui.contactss.ContactFragment"
        android:label="@string/menu_contactss"
        tools:layout="@layout/contact_fragment" />






</navigation>