<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_preview"
        android:orderInCategory="100"
        android:title="@string/action_preview"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_watch"
        android:orderInCategory="100"
        android:title="@string/action_watch"
        app:showAsAction="never" />







</menu>
